--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "^3.4.29"
+    "vue": "^3.4.29",
+    "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
